# swc-minify-lits

./: .gitignore  Cargo.toml  README.md  package.json
src/: css.rs  error.rs  html.rs  lib.rs  prelude.rs  settings.rs  tpl_processor.rs
src/utils/: quasi.rs  tpl.rs
