[package]
name = "minify-lits"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
serde = "1"
swc_core = { version = "0.90.*", features = ["ecma_plugin_transform"] }
thiserror = "1.0.58"
lightningcss = "1.0.0-alpha.55"
itertools = "0.12.1"
tracing = "0.1.40"

# .cargo/config defines few alias to build plugin.
# cargo build-wasi generates wasm-wasi32 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.
