[package]
name = "swc-minify-lits"
version = "0.1.0"
description = "SWC plugin for minifying HTML and CSS template literals."
authors = ["James Burton <james@functionalcore.dev>"]
license = "MIT"
homepage = "https://swc.rs"
repository = "https://github.com/Functional-Core/swc-minify-lits"
readme = "README.md"
categories = [
    "development-tools",
    "development-tools::build-utils",
    "web-programming",
]
keywords = ["swc", "minify", "html", "css", "template", "literals"]
publish = false

edition = "2021"
rust-version = "1.77.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
lto = true

strip = "symbols"

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
swc_core = { version = "0.90.*", features = ["ecma_plugin_transform"] }
thiserror = "1.0.58"
lightningcss = "1.0.0-alpha.55"
itertools = "0.12.1"
tracing = { version = "0.1.40", features = ["release_max_level_info"] }
serde_json = "1.0.115"
minify-html = "0.15.0"

# .cargo/config defines few alias to build plugin.
# cargo build-wasi generates wasm-wasi32 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.
